# quota_notifier

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/actions/docs/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: CodeQL.yml  DeployDocs.yml  Documentation.yml  DocumentationBuild.yml  DocumentationPublish.yml  IssueAdd.yml  PackagePublish.yml  PackageTest.yml  Packaging.yml  PublishPackage.yml  Unittests.yml
.github/workflows/actions/: Tests.yml
app/: __init__.py  cli.py  disk_utils.py  email.py  main.py  notify.py  orm.py  settings.py  shell.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst
docs/source/api/: main.rst
docs/source/getting_started/: command_line.rst  usage.rst
docs/source/modules/: cli.rst  disk_utils.rst  email.rst  main.rst  notify.rst  orm.rst  settings.rst  shell.rst
docs/source/overview/: command_line.rst  config_options.rst  configuration.rst  file_systems.rst  install.rst  installation.rst  settings.rst  usage.rst
docs/source/source_docs/: cli.rst  disk_utils.rst  log.rst  shell.rst
docs/templates/python/: module.rst
quota_notifier/: __init__.py  app_logging.py  cli.py  disk_utils.py  email.py  log.py  main.py  notify.py  orm.py  settings.py  shell.py
quota_notifier/data/: template.html
tests/: base.py  test_temp.py
tests/app_logging/: test_applicationlog.py
tests/cli/: test_application.py  test_parser.py
tests/disk_utils/: test_abstractquota.py  test_beegfsquota.py  test_genericquota.py  test_quotafactory.py
tests/email/: test_emailtemplate.py
tests/log/: test_console_logging.py  test_file_logging.py
tests/main/: test_application.py  test_parser.py
tests/notify/: test_emailtemplate.py  test_user_notifier.py  test_usernotifier.py
tests/orm/: test_dbconnection.py  test_notification.py
tests/settings/: test_applicationsettings.py  test_defaults.py  test_filesystemschema.py  test_settingsschema.py
tests/shell/: test_shell.py  test_user.py
