[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quota-notifier"
dynamic = ["version"]
description = "Automatic email notification tool for disk quota usage."
keywords = ["disk", "usage", "quota", "notify", "email", ]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = ["pydantic==1.10.2", "sqlalchemy==1.4.44", ]

[[project.authors]]
name = "Pitt Center for Research Computing"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
notifier = "quota_notifier.main:Application.execute"

[project.optional-dependencies]
docs = ["sphinx==5.2.1", "sphinx-argparse==0.3.1", "sphinx-copybutton==0.5.0", "sphinx-pydantic==0.1.1", "sphinx-rtd-theme==1.1.1", "sphinx-jsonschema==1.15", ]
tests = ["coverage", ]

[tool.setuptools.dynamic]
version = { attr = "quota_notifier.__version__" }
