[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quota-notifier"
version = "0.0.0"  # Version is set dynamically by the CI tool on publication
authors = ["Pitt Center for Research Computing", ]
readme = "README.md"
description = "Automatic email notification tool for disk quota usage."
homepage = "https://github.com/pitt-crc/quota_notifier"
repository = "https://github.com/pitt-crc/quota_notifier"
documentation = "https://crc-pages.pitt.edu/quota_notifier/"
keywords = ["disk", "usage", "quota", "notify", "email", ]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]

[tool.poetry.scripts]
notifier = "quota_notifier.main:Application.execute"

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "==1.10.2"
sqlalchemy = "==1.4.44"

# Optional dependencies for running tests
coverage = { version = "*", extras = ["dev", "tests"] }

# Optional dependencies for building docs
sphinx = { version = "5.3.0", extras = ["dev", "docs"] }
sphinx-argparse = { version = "==0.4.0 ", extras = ["dev", "docs"] }
sphinx-copybutton = { version = "==0.5.1 ", extras = ["dev", "docs"] }
sphinx-pydantic = { version = "==0.1.1 ", extras = ["dev", "docs"] }
sphinx-rtd-theme = { version = "==1.1.1 ", extras = ["dev", "docs"] }
sphinx-jsonschema = { version = "==1.15", extras = ["dev", "docs"] }

